Add auth features with login, register pages and database support

--- a/src/client/i18n/locales/en/common.json
+++ b/src/client/i18n/locales/en/common.json
@@ -1,12 +1,18 @@
 {
-  "appTitle": "Hono + React Example",
-  "nav": {
-    "home": "Home",
-    "users": "Users",
-    "about": "About",
-    "menu": "Menu"
-  },
-  "footer": {
-    "copyright": "Hono + React Example Project"
-  }
+    "appTitle": "Hono + React Example",
+    "nav": {
+        "home": "Home",
+        "users": "Users",
+        "about": "About",
+        "menu": "Menu",
+        "login": "Login",
+        "register": "Register",
+        "logout": "Logout"
+    },
+    "success": "Success",
+    "error": "Error",
+    "logoutSuccess": "Logged out successfully",
+    "footer": {
+        "copyright": "Hono + React Example Project"
+    }
 }
