--- a/src/client/i18n/locales/zh-CN/common.json
+++ b/src/client/i18n/locales/zh-CN/common.json
@@ -1,12 +1,18 @@
 {
-  "appTitle": "Hono + React 示例",
-  "nav": {
-    "home": "首页",
-    "users": "用户",
-    "about": "关于",
-    "menu": "菜单"
-  },
-  "footer": {
-    "copyright": "Hono + React 示例项目"
-  }
+    "appTitle": "Hono + React 示例",
+    "nav": {
+        "home": "首页",
+        "users": "用户",
+        "about": "关于",
+        "menu": "菜单",
+        "login": "登录",
+        "register": "注册",
+        "logout": "退出"
+    },
+    "success": "成功",
+    "error": "错误",
+    "logoutSuccess": "退出登录成功",
+    "footer": {
+        "copyright": "Hono + React 示例项目"
+    }
 }
